java memory notes improved